--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ permalink: /:title
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll/tagging
+  - jekyll-tagging
 
 paginate: 12
 paginate_path: "/page/:num"
