Added COnfig file

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
-title: GEMINI Series
-logo: # You can add own logo. For example '/images/gemini.png'.
-description: A series of day-long workshops covering best practices, software, methods for Genomics, Microbiology, and Immunology (GEMINI)
+title: US Jobs
+logo: 'images/us-logo.png' # Add your logo path
+description: 'US-Jobs: Your go-to source for the latest job trends, career advice, and employment opportunities across the USA.'
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 future: true
@@ -10,15 +10,15 @@ future: true
 #-------------------------------
 # Author Settings
 author:
-  name: Team Gemini
-  title: GEMINI
-  description: A series of one-day, hands-on, workshops geared toward software and tools for advanced data analysis in GEnomics, MIcrobiology, aNd Immunology (GEMINI).
-  image: '/images/gemini.png'
-  avatar: '/images/gemini-avatar.png'
+  name: Coding Rhodes
+  title: Coding Rhodes
+  description: Hi, I am Coding Rhodes, One of the blog authors of this site. Do let me know in the comments, If you have any Questions.
+  image: '/images/Author-codingRhodes.webp'
+  avatar: '/images/Author-codingRhodes.webp'
 
 social:
-- {icon: "ion-logo-twitter", label: Twitter, link: "https://twitter.com"}
-- {icon: "ion-logo-github", label: Github, link: "https://github.com/gemini-series/gemini-series.github.io"}
+- {icon: "ion-logo-twitter", label: Twitter, link: "https://twitter.com/codingrhodes"}
+# - {icon: "ion-logo-github", label: Github, link: "https://github.com/"}
 
 # Example of adding a new link to the author section - {icon: "ion-logo-vimeo", label: Vimeo, link: "https://vimeo.com"}
 # Other icons can be found at https://ionicons.com/v4/
@@ -36,8 +36,8 @@ mailchimp__button__text: Join # Add your button text
 #-------------------------------
 # Contact Settings
 contact:
-  email: your@email.com # Add your email for contact form
-  description: Bracia comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want. # Add a description of your form
+  email: codingrhodes@email.com # Add your email for contact form
+  description:  # Add a description of your form
 
 # NOTE
 # Bracia comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want.
@@ -45,7 +45,7 @@ contact:
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: anvodstudio-demo # Add your shortname for Disqus Comment. For example anvodstudio-demo
+disqus-identifier: codingrhodes # Add your shortname for Disqus Comment. For example anvodstudio-demo
 
 
 #-------------------------------
