--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title: US Jobs
 logo: 'images/us-logo.png' # Add your logo path
 description: 'US-Jobs: Your go-to source for the latest job trends, career advice, and employment opportunities across the USA.'
-baseurl: "https://us-jobs.github.io" # The subpath of your site, e.g. /blog
-url: "" # The base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # The subpath of your site, e.g. /blog
+url: "https://us-jobs.github.io" # The base hostname & protocol for your site, e.g. http://example.com
 future: true
 
 #-------------------------------
