--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 #-------------------------------
 # General Site Settings
 title: US Jobs
-logo: 'images/us-logo.png' # Add your logo path
+logo: 'assets/images/us-logo.png' # Add your logo path
 description: 'US-Jobs: Your go-to source for the latest job trends, career advice, and employment opportunities across the USA.'
 baseurl: "" # The subpath of your site, e.g. /blog
-url: "https://us-jobs.github.io" # The base hostname & protocol for your site, e.g. http://example.com
 future: true
 
 #-------------------------------
