--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: US Jobs
 logo: 'assets/images/us-logo.png' # Add your logo path
 description: 'US-Jobs: Your go-to source for the latest job trends, career advice, and employment opportunities across the USA.'
-baseurl: "" # The subpath of your site, e.g. /blog
+baseurl: "us-jobs.github.io" # The subpath of your site, e.g. /blog
 future: true
 
 #-------------------------------
