--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site
-name: 'Mundana'
-description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/favicon.ico'
+name: 'US Jobs'
+description: 'US-Jobs: Your go-to source for the latest job trends, career advice, and employment opportunities across the USA.'
+logo: 'assets/images/us-logo.png'
+favicon: 'assets/images/favicon-us.ico'
 baseurl: ''
-disqus: 'demowebsite'
-email: 'wowthemesnet@gmail.com'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+disqus: 'codingrhodes'
+email: 'codingrhodes@gmail.com'
+mailchimp-list: ''
 
 include: ["_pages"]
 permalink: /:title/
@@ -19,21 +19,16 @@ plugins:
   - jekyll-seo-tag
   
 authors:
-    sal:
-      name:           Sal
-      site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
-      email:          wowthemesnet@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+    CodingRhodes:
+      name:           Coding Rhodes
+      site:           /
+      avatar:         assets/images/Author-codingRhodes.webp
+      bio:            "Hi, I am Coding Rhodes, the author of this article, Do let me know If you have any Questions"
+      email:          CodingRhodes@gmail.com
+      twitter:        https://x.com/CodingRhodes
 
-    jane:
-      name:           Jane
-      site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
-      email:          fakemail@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+social:
+- {icon: "ion-logo-twitter", label: Twitter, link: "https://twitter.com/codingrhodes"}
  
 # Defaults
 defaults:
@@ -43,8 +38,8 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
-      avatar: /assets/images/avatar1.jpg
+      author: CodingRhodes
+      avatar: /assets/images/Author-codingRhodes.webp
       
   # all pages
   - scope:
@@ -63,3 +58,5 @@ paginate: 10
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+
+
